minor changes to list